# api/swagger/swagger.yaml
@@ -42,7 +42,7 @@ paths:
             helper: volos
             function: cacheMosquitoKinds
     get:
-      description: Returns mosquito prevelence metadata for all countries - arg, bra, col...etc.
+      description: Returns mosquito prevalence metadata for all countries - arg, bra, col...etc.
       parameters:
         # - name: format
         #   type: string
@@ -95,7 +95,7 @@ paths:
             helper: volos
             function: cacheMosquitoByCountry
     get:
-      description: Returns all metadata regarding mosquito prevelence for requested country - arg, bra, col...etc.
+      description: Returns all metadata regarding mosquito prevalence for requested country - arg, bra, col...etc.
       parameters:
         - name: kind
           type: string
@@ -115,7 +115,7 @@ paths:
                               "country": "afg",
                               "source": "simon_hay",
                               "kind": "aegypti",
-                              "mosquito_prevelence": {
+                              "mosquito_prevalence": {
                                 "afg_1_16_170_gadm2-8": 0.0628956609969974,
                                 "afg_1_25_250_gadm2-8": 0.0167634032894597,
                                 "afg_1_11_103_gadm2-8": 0.0821634181047418
@@ -372,7 +372,7 @@ definitions:
       - country
       - source
       - raster
-      - mosquito_prevelence
+      - mosquito_prevalence
     properties:
       country:
         type: 'string'
@@ -380,7 +380,7 @@ definitions:
         type: 'string'
       raster:
         type: 'string'
-      mosquito_prevelence:
+      mosquito_prevalence:
         type: object
 
   ErrorResponse:
